trying a fix for mobile/safari where user contorls were overflowing and the blackground turned white. Added a scroll which seemed to fix the problem. Also added favicon.

--- a/styles/sass/_game.scss
+++ b/styles/sass/_game.scss
@@ -204,6 +204,7 @@
 
         .user-controls {
             flex-wrap: wrap;
+            overflow: auto;
         }
 
         .user-ammo {
